---
source: tests/integration_test.rs
expression: record
info: "type=CRYPTO_SESSION msg=audit(1481077041.515:406): pid=1298 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:sshd_t:s0-s0:c0.c1023 msg='op=start direction=from-server cipher=chacha20-poly1305@openssh.com ksize=512 mac= pfs=curve25519-sha256@libssh.org spid=1299 suid=74 rport=63927 laddr=10.142.0.2 lport=22  exe=\"/usr/sbin/sshd\" hostname=? addr=96.241.146.97 terminal=? res=success'"
---
{
  "record_type": "CRYPTO_SESSION",
  "timestamp": 1481077041515,
  "id": 406,
  "fields": {
    "auid": 4294967295,
    "msg": "op=start direction=from-server cipher=chacha20-poly1305@openssh.com ksize=512 mac= pfs=curve25519-sha256@libssh.org spid=1299 suid=74 rport=63927 laddr=10.142.0.2 lport=22  exe=\"/usr/sbin/sshd\" hostname=? addr=96.241.146.97 terminal=? res=success",
    "pid": "1298",
    "ses": "4294967295",
    "subj": "system_u:system_r:sshd_t:s0-s0:c0.c1023",
    "uid": 0
  }
}
